# WomoLIN-Sw-SigUni

./: CMakeLists.txt  README.md  additionals.cpp  hal.cpp  hal.h  helper.cpp  managerbase.cpp  managerbase.h  protocol.cpp  protocol.h  signal.cpp  signal.h  unit.cpp  unit.h  version.cpp  version.h
gtest/: CMakeLists.txt  hal_test.cpp  helper_test.cpp  managerbase_test.cpp  mocks.h  protocol_test.cpp  signal_test.cpp  siguni_test.cpp  test.cpp  unit_test.cpp
interface/: additionals.h  helper.h  icontrolbus.h  ihw.h  isignal.h  iunit.h  settings.h
